[gd_scene load_steps=6 format=3 uid="uid://wt6tk48qfnrj"]

[ext_resource type="Script" path="res://scripts/cube'.gd" id="1_lfmna"]
[ext_resource type="Texture2D" uid="uid://d2xj5s3l6led1" path="res://assets/structures/cube.png" id="2_dgc83"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtvwe"]
size = Vector2(115, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7o5b3"]
size = Vector2(115, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4sil"]
size = Vector2(117, 103)

[node name="Cube" type="CharacterBody2D" node_paths=PackedStringArray("death", "detector")]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_lfmna")
death = NodePath("Area2D2")
detector = NodePath("Area2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dgc83")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_vtvwe")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_7o5b3")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_y4sil")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
